backups/pre-namespace-consolidation/ns-trivy-system.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Namespace","metadata":{"annotations":{},"creationTimestamp":null,"name":"trivy-system"},"spec":{},"status":{}}
  creationTimestamp: "2026-05-14T04:08:20Z"
  labels:
    kubernetes.io/metadata.name: trivy-system
    zta.job7189/data-classification: internal
    zta.job7189/env: prod
    zta.job7189/exposure: cluster-only
    zta.job7189/role: scanner
    zta.job7189/team: security
    zta.job7189/tier: T1
  name: trivy-system
  resourceVersion: "136989"
  uid: 338d8d7e-782d-41e8-a710-1f9dd9b7b5ca
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
